# debian_copyist_brother

./: .gitignore  COPYING.md  LICENSE.md  README.md
abstract/: English_gpl.txt  English_gpl.url  English_lpr.url  English_sane.txt  English_source.txt
doc/: brother_legal.md  cohabitation_issues.md  cupswrappers_and_lpd_drivers.md  documentation.md  driver_dependencies.md  generated_ppds_and_filters.md  known_bugs_from_brother.md  other_projects.md  other_projects_working_on_brother_drivers.md  other_projects_working_on_other_brand.md  other_projects_wrintings_brother_compatible_drivers.md  packaging.md  standalone_ppds.md  status_of_brother_files.md  web_brother.md  where_are_drivers.md  where_are_sources.md  where_is_information.md  where_is_knowledge.md
doc/abstract/: English_sane.url  English_source.url
material/abstract/cupswrappers_modified/: cupswrapperDCP110C-1.0.2  cupswrapperDCP1400-1.0.2  cupswrapperDCP310CN-1.0.2  cupswrapperDCP7010-2.0.1  cupswrapperDCP7020-2.0.1  cupswrapperDCP7025-2.0.1  cupswrapperDCP7030-2.0.2  cupswrapperDCP7040-2.0.2  cupswrapperDCP7045N-2.0.2  cupswrapperDCP7055-2.0.4  cupswrapperDCP7057-2.0.4  cupswrapperDCP7060D-2.0.4  cupswrapperDCP7065DN-2.0.4  cupswrapperDCP7070DW-2.0.4  cupswrapperDCP8020-1.0.2  cupswrapperDCP8025D-1.0.2  cupswrapperDCP8040-1.0.2  cupswrapperDCP8045D-1.0.2  cupswrapperDCP8060-2.0.1  cupswrapperDCP8065DN-2.0.1  cupswrapperDCP8070D-2.0.4  cupswrapperDCP8080DN-2.0.4  cupswrapperDCP8085DN-2.0.4  cupswrapperFAX1815C-1.0.0  cupswrapperFAX1820C-1.0.0  cupswrapperFAX1835C-1.0.2  cupswrapperFAX1840C-1.0.2  cupswrapperFAX1920CN-1.0.0  cupswrapperFAX1940CN-1.0.2  cupswrapperFAX2440C-1.0.2  cupswrapperFAX2820-2.0.1  cupswrapperFAX2850-1.0.2  cupswrapperFAX2900-1.0.2  cupswrapperFAX2920-2.0.1  cupswrapperFAX3800-1.0.2  cupswrapperFAX4100-1.0.2  cupswrapperFAX4750E-1.0.2  cupswrapperFAX5750E-1.0.2  cupswrapperHL1030-1.0.2  cupswrapperHL1230-1.0.2  (+264 more)
material/abstract/cupswrappers_original/: cupswrapperDCP8020-1.0.2  cupswrapperDCP8085DN-2.0.4  cupswrapperFAX2440C-1.0.2  cupswrapperFAX2850-1.0.2  cupswrapperFAX2920-2.0.1  cupswrapperFAX5750E-1.0.2  cupswrapperHL1650-1.0.2  cupswrapperHL2040-2.0.1  cupswrapperHL2132-2.0.4  cupswrapperHL2270DW-2.0.4  cupswrapperHL5040-1.0.2  cupswrapperMFC5440CN-1.0.2  cupswrapperMFC7840N-2.0.2  cupswrapperMFC8370DN-2.0.4  cupswrapperMFC8500-1.0.2  cupswrapperMFC9030-1.0.2  cupswrapperMFC9180-1.0.2  cupswrapperMFC9700-1.0.2  cupswrapperSetup_dcp9040cn  cupswrapperSetup_hl4040cn  cupswrapperSetup_hl4070cdw  cupswrapperdcp135c  cupswrapperdcp150c  (+16 more)
material/lists/: all_archives_urls.txt  all_archives_with_licenses.txt  all_licenses.txt  all_licenses_urls.txt  all_models.txt  all_primary_models_with_archives.txt  labelers_archives_urls.txt  labelers_archives_with_licenses.txt  labelers_models.txt  labelers_primary_models_with_archives.txt  pcfaxes_archives_urls.txt  pcfaxes_archives_with_licenses.txt  pcfaxes_licenses.txt  printers_archives_urls.txt  printers_archives_with_licenses.txt  printers_files_with_metadata.txt  printers_licenses_urls.txt  printers_newer_files_with_metadata.txt  printers_primary_models.txt  printers_primary_models_with_archives.txt  printers_secondary_models.txt  printers_secondary_models_with_primary.txt  printers_unique_files_with_metadata.txt  scanners_archives_urls.txt  scanners_archives_with_licenses.txt  scanners_licenses.txt  scanners_licenses_urls.txt  sources_archives_urls.txt  sources_archives_with_licenses.txt  sources_licenses.txt  sources_licenses_urls.txt
material/sources/brscan2-src-0.2.5-1/brscan/: Makefile  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in  copying.brother  libtool
material/sources/brscan2-src-0.2.5-1/brscan/backend_brscan2/: Makefile  Makefile.in  mk_backend
material/sources/brscan2-src-0.2.5-1/brscan/backend_src/: brother.h  brother2.c  brother_advini.c  brother_advini.h  brother_bugchk.c  brother_bugchk.h  brother_cmatch.c  brother_cmatch.h  brother_devaccs.c  brother_devaccs.h  brother_devinfo.c  brother_devinfo.h  brother_dtype.h  brother_log.c  brother_log.h  brother_mfccmd.c  brother_mfccmd.h  brother_mfcinfo.h  brother_misc.c  brother_misc.h  brother_modelinf.c  brother_modelinf.h  brother_netdev.c  brother_netdev.h  brother_scanner.c  brother_scanner.h  dll-preload.c
material/sources/brscan2-src-0.2.5-1/brscan/include/: Makefile.in  lalloca.h  md5.h
material/sources/brscan2-src-0.2.5-1/brscan/include/sane/: sanei_ab306.h  sanei_lm983x.h  sanei_net.h  sanei_pv8630.h  sanei_usb.h  sanei_wire.h
material/sources/brscan2-src-0.2.5-1/brscan/lib/: alloca.c  getenv.c  inet_ntop.lo  isfdtype.c  isfdtype.lo  md5.c  md5.lo  snprintf.lo  strdup.lo  strndup.c  strsep.c  usleep.c  vsyslog.lo
material/sources/brscan2-src-0.2.5-1/brscan/libbrcolm2/: libbrcolm2.so.1.0.0
material/sources/brscan2-src-0.2.5-1/brscan/libbrcolm2/GrayCmData/AL/: brmsl09f.cm
material/sources/brscan2-src-0.2.5-1/brscan/libbrcolm2/GrayCmData/ALL/: brmsl08f.cm
material/sources/brscan2-src-0.2.5-1/brscan/libbrscandec2/: brother_deccom.h  libbrscandec2.so.1.0.0
material/sources/brscan2-src-0.2.5-1/brscan/mk_package/: Brsane.ini  Brsane2.ini  Makefile  brscan.list  brscan2.list  ext2.ini  makepackage  setupSaneScan  setupSaneScan2
material/sources/brscan2-src-0.2.5-1/brscan/netconfig/: brsaneconfig.c  resource.h
material/sources/brscan2-src-0.2.5-1/brscan/po/: Makefile
material/sources/brscan2-src-0.2.5-1/brscan/sanei/: Makefile.in  os2_srb.h  sanei_ab306.c  sanei_auth.lo  sanei_codec_ascii.c  sanei_codec_bin.c  sanei_codec_bin.lo  sanei_config.lo  sanei_config2.c  sanei_constrain_value.c  sanei_init_debug.lo  sanei_pio.c  sanei_pv8630.c  sanei_save_values.c
tools/: copy_cupswrappers.sh  copy_files.sh  extract_file_from_archive.sh  extract_printers_archives.sh  extract_printers_archives_only_newer_files.sh  extract_sources.sh  list_printers_extracted_files_with_metadata.sh  list_printers_files_with_metadata.sh  list_printers_newer_files_with_metadata.sh  list_printers_unique_files_with_metadata.sh  unwrap_ppds_and_filters.sh  web_brother.sh
(+2770 files in other folders)
